# stork-editor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
assets/: sprites.csv  stored_brushes.json
src/: load.rs  main.rs  utils.rs
src/data/: alph.rs  area.rs  backgrounddata.rs  blkz.rs  brak.rs  course_file.rs  grad.rs  mapfile.rs  mod.rs  path.rs  rarc.rs  segments.rs  sprites.rs  types.rs
src/data/scendata/: anmz.rs  colz.rs  imbz.rs  imgb.rs  info.rs  mod.rs  mpbz.rs  plan.rs  pltb.rs  rast.rs  scrl.rs
src/engine/: compression.rs  displayengine.rs  filesys.rs  mod.rs
src/gui/: gui.rs  maingrid.rs  mod.rs  modal.rs  sidepanel.rs  spritepanel.rs  spritesettings.rs  toppanel.rs
src/gui/windows/: brushes.rs  col_win.rs  course_win.rs  map_segs.rs  mod.rs  palettewin.rs  paths_win.rs  resize.rs  saved_brushes.rs  scen_segs.rs  settings.rs  sprite_add.rs  tileswin.rs  triggers.rs
src/utils/: profile.rs
