[package]
name = "stork2"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "storkeditor"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
colored = "3.0.0"
csv = "1.3.1"
ds-rom = "0.4.2"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
lamezip77 = "0.0.1"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
rand = "0.9.0"
rfd = "0.15.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
simple-logging = "2.0.2"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
