[package]
name = "stork2"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "storkeditor"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.39", features = ["derive"]}
colored = "3.0.0"
csv = "1.3.1"
ds-rom = "0.4.2"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
lamezip77 = "0.0.1"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
paste = "1.0.15"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
puffin = "0.19.1"
puffin_http = "0.16.1"
rand = "0.9.0"
rfd = "0.15.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
simple-logging = "2.0.2"
strum = { version = "0.27.1", features = ["derive"] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
